--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 [dependencies]
 csv = "1.3.0"
 rand = "0.8.5"
-raylib = { version = "5.0.1", features = ["wayland"] }
+raylib = { version = "5.0.1" }
 serde = { version = "1.0.203", features = ["derive"] }
+
+[target.x86_64-unknown-linux-gnu.dependencies]
+raylib = { version = "5.0.1", features = ["wayland"] }
