--- a/Cross.toml
+++ b/Cross.toml
@@ -1,5 +1,4 @@
 [target.x86_64-pc-windows-gnu]
 pre-build = [ 
-    "apt-get update && apt-get --assume-yes install libglfw3-dev",
-    #"apt-get --assume-yes build-dep glfw3"  
+    "apt-get update && apt-get --assume-yes install libglfw3-dev clang",
 ]
